Fixed, titles overflow size & network fail message.

--- a/web/css/classify.css
+++ b/web/css/classify.css
@@ -324,6 +324,7 @@
 
 #clTitle {
     height: 35px;
-    margin-bottom: 10px;
+    margin: 0 auto 10px auto;
     text-align: center;
+    width: 500px;
 }
