--- a/web/css/document.css
+++ b/web/css/document.css
@@ -28,8 +28,9 @@
 
 #dcTitle {
     height: 35px;
-    margin-bottom: 25px;
+    margin: 0 auto 25px auto;
     text-align: center;
+    width: 500px;
 }
 
 #dcUpdateDocument {
